--- a/lembretes/macos/Runner/Configs/AppInfo.xcconfig
+++ b/lembretes/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = lembretes
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.lembretes
+PRODUCT_BUNDLE_IDENTIFIER = com.lembrancas.app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
