--- a/lembretes/pubspec.yaml
+++ b/lembretes/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0+4
+  path: ^1.8.0
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.8.0
 
 dev_dependencies:
   flutter_test:
