--- a/lembretes/pubspec.yaml
+++ b/lembretes/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
     sdk: flutter
   sqflite: ^2.0.0+4
   path: ^1.8.0
-  firebase_core: ^2.10.0
-  firebase_auth: ^4.8.0
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
