--- a/lembretes/pubspec.yaml
+++ b/lembretes/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^14.0.0
   sqflite: ^2.0.0+4
   path: ^1.8.0
   firebase_core: ^3.6.0
