--- a/lembretes/pubspec.yaml
+++ b/lembretes/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_local_notifications: ^14.0.0
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
   sqflite: ^2.0.0+4
   path: ^1.8.0
   firebase_core: ^3.6.0
