--- a/lembretes/pubspec.yaml
+++ b/lembretes/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: ^17.2.3
   timezone: ^0.9.4
+  permission_handler: ^11.3.1
   sqflite: ^2.0.0+4
   path: ^1.8.0
   firebase_core: ^3.6.0
